Refactor + Restyle login/register screens. See #134

--- a/core/admin/views/login.hbs
+++ b/core/admin/views/login.hbs
@@ -1,6 +1,5 @@
 {{!< default}}
 <section class="login-box">
-    <img class="login-logo" src="/core/admin/assets/img/logo.png" alt="" />
     <form id="login" method="post">
         <div class="email-wrap">
             <input class="email" type="text" placeholder="Email Address" name="email">
@@ -9,6 +8,8 @@
             <input class="password" type="password" placeholder="Password" name="password">
         </div>
         <button class="button-save" type="submit">Log in</button>
-        <a href="/ghost/register/">Register</a>
+        <section class="meta">
+            <a class="forgotten-password" href="#">Forgotten password?</a> &bull; <a href="/ghost/register/">Register new user</a>
+        </section>
     </form>
 </section>
