--- a/core/admin/views/register.hbs
+++ b/core/admin/views/register.hbs
@@ -1,12 +1,15 @@
 {{!< default}}
-<img class="login-logo" src="/core/admin/assets/img/logo.png" alt="" />
-<form id="register" method="post">
-    <div class="email-wrap">
-        <input class="email_address" type="text" placeholder="Email Address" name="email_address">
-    </div>
-    <div class="password-wrap">
-        <input class="password" type="password" placeholder="Password" name="password">
-    </div>
-    <button class="button-save" type="submit">Register</button>
-    <a href="/ghost/login/">Log in</a>
-</form>
+<section class="login-box">
+    <form id="register" method="post">
+        <div class="email-wrap">
+            <input class="email_address" type="text" placeholder="Email Address" name="email_address">
+        </div>
+        <div class="password-wrap">
+            <input class="password" type="password" placeholder="Password" name="password">
+        </div>
+        <button class="button-save" type="submit">Register</button>
+        <section class="meta">
+            <a href="/ghost/login/">Log in</a>
+        </section>
+    </form>
+</section>
