--- a/core/admin/views/settings.hbs
+++ b/core/admin/views/settings.hbs
@@ -9,7 +9,7 @@
                 <li class="general"><a href="#general">General</a></li>
                 <li class="publishing"><a href="#content">Content</a></li>
                 <li class="users"><a href="#users">Users</a></li>
-                <li class="appearance"><a href="#appearance">Appearance</a></li>
+                <li class="appearance"><a href="#appearance">Theme</a></li>
                 <li class="services"><a href="#">Connected Services</a></li>
                 <li class="plugins"><a href="#">Plugins</a></li>
             </ul>
