--- a/core/admin/views/signup.hbs
+++ b/core/admin/views/signup.hbs
@@ -1,5 +1,5 @@
 {{!< default}}
-<section class="login-box">
+<section class="login-box js-login-container">
     <form id="register" method="post">
         <div class="email-wrap">
             <input class="email_address" type="text" placeholder="Email Address" name="email_address">
