--- a/core/admin/views/login.hbs
+++ b/core/admin/views/login.hbs
@@ -9,7 +9,7 @@
         </div>
         <button class="button-save" type="submit">Log in</button>
         <section class="meta">
-            <a class="forgotten-password" href="#">Forgotten password?</a> &bull; <a href="/ghost/register/">Register new user</a>
+            <a class="forgotten-password" href="#">Forgotten password?</a> &bull; <a href="/ghost/signup/">Register new user</a>
         </section>
     </form>
 </section>
