--- a/core/admin/assets/sass/modules/global.scss
+++ b/core/admin/assets/sass/modules/global.scss
@@ -861,7 +861,7 @@ nav {
         };
         display: inline-block;
         color: rgba(255,255,255,0.6);
-
+        cursor: pointer;
         &:hover { color: #fff; }
 
     }
